--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <div class="container">
         <div class="anchor"></div>
     </div>
-    <script src="/src/app.js"></script>
+
+    <h1>Clicker</h1>
+    <button class="click-button">Click</button>
+    <div class="click-number"></div>
+    <button class="companion-button">Purchase Click Companion for 100 clicks</button>
+    <div class="click-companion"></div>
+    <button class="compounder-button">Purchase Click Compounder for 10 clicks</button>
+    <div class="click-compounder"></div>
+
+    
+    <script src="src/js/ClickCounter.js"></script>
+    <script src="src/js/app.js"></script>
 </body>
 </html>
