--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 4 Project</title>
 </head>
+
+<link rel="stylesheet" href="src/css/style.css">
+<link rel="stylesheet" href="src/css/layout.css">
+
 <body>
     <div class="container">
         <div class="anchor"></div>
     </div>
 
-    <h1>Clicker</h1>
-    <button class="click-button">Click</button>
-    <div class="click-number"></div>
-    <button class="companion-button">Purchase Click Companion for 100 clicks</button>
-    <div class="click-companion"></div>
-    <button class="compounder-button">Purchase Click Compounder for 10 clicks</button>
-    <div class="click-compounder"></div>
+    <h1>ShrimpClick</h1>
 
-    
+    <section class="display">
+        <div class="click">
+            <button class="click-button"><img class="click-image" src="src/css/friedshrimp.png" alt="fried shrimp emoji"></button>
+            <div class="click-number"></div>
+        </div>
+        <div class="companion">
+            <button class="companion-button">Purchase Click Companion for 100 clicks</button>
+            <div class="click-companion"></div>
+        </div>
+        <div class="compounder">
+            <button class="compounder-button">Purchase Click Compounder for 10 clicks</button>
+            <div class="click-compounder"></div>
+        </div>
+    </section>
+
+
     <script src="src/js/ClickCounter.js"></script>
     <script src="src/js/app.js"></script>
 </body>
+
 </html>
