added interval functionality, reset button and updated css

--- a/index.html
+++ b/index.html
@@ -17,18 +17,30 @@
 
     <h1>ShrimpClick</h1>
 
+    <h2 class="header">
+        <div class="header-companyinfo">Company Info</div>
+        <div class="header-inspo">Game Inspiration</div>
+        <div class="header-devinfo">Developer Info</div>
+    </h2>
+
     <section class="display">
         <div class="click">
             <button class="click-button"><img class="click-image" src="src/css/friedshrimp.png" alt="fried shrimp emoji"></button>
-            <div class="click-number"></div>
+                <div class="click-number"></div>
         </div>
-        <div class="companion">
-            <button class="companion-button">Purchase Click Companion for 100 clicks</button>
-            <div class="click-companion"></div>
-        </div>
-        <div class="compounder">
-            <button class="compounder-button">Purchase Click Compounder for 10 clicks</button>
-            <div class="click-compounder"></div>
+        <div class="display-buttons">
+            <div class="companion">
+                <button class="companion-button">Purchase Click Companion for 100 clicks</button>
+                <div class="click-companion"></div>
+            </div>
+            <div class="compounder">
+                <button class="compounder-button">Purchase Click Compounder for 10 clicks</button>
+                <div class="click-compounder"></div>
+            </div>
+
+            <div class="reset">
+                <button class="reset-button">Reset game</button>
+            </div>
         </div>
     </section>
 
